compiler/typ/tests/fixtures/diagnostics/0237_adt_record_pattern_annotation_mismatch_10.ml
type rec_kappa = { key : int; ok : bool }
let { key = (kappa : bool); ok = other_kappa } =
  { key = 9; ok = false }
